--- a/content-org/site.org
+++ b/content-org/site.org
@@ -48,7 +48,7 @@ In this Winter 2021 installment of the NC State Economist, Dr. Daniel Tregeagle 
 
 ### [Estimated Cost of the Withdrawal of the Insecticide Chlorpyrifos for Six Major California Crops](/files/Wei et al. - Estimated Cost of the Withdrawal of the Insecticid.pdf)
 
-In May 2019, the CA Department of Pesticide Regulation (DPR) initiated the cancellation of the pesticide chlorpyrifos. This article estimates the economic effects of cancellation on six major California crops. Statewide annual revenue losses are estimated at \$11.5 million, averaged across acreage and pesticide use for three base years (2015–2017): \$1.6 million for alfalfa, \$0.6 million for almonds, \$1 million for citrus, \$7.1 million for cotton, \$4.3 million for grapes, and \$3.2 million for walnuts. In addition, gross revenue losses due to reduced cotton yields are estimated to be \$6.3 million. Importantly, estimated losses are for only six crops. The total cost to California agriculture will be greater. 
+In May 2019, the CA Department of Pesticide Regulation (DPR) initiated the cancellation of the pesticide chlorpyrifos. This article estimates the economic effects of cancellation on six major California crops. Statewide annual revenue losses are estimated at \$11.5 million, averaged across acreage and pesticide use for three base years (2015–2017): \$1.6 million for alfalfa, \$0.6 million for almonds, \$1 million for citrus, \$7.1 million for cotton, \$4.3 million for grapes, and \$3.2 million for walnuts. In addition, gross revenue losses due to reduced cotton yields are estimated to be \$6.3 million. Importantly, estimated losses are for only six crops. The total cost to California agriculture will be greater.
 
 <br>
 
@@ -71,7 +71,7 @@ California review of the herbicide dacthal triggered by the requirements of Cali
 
 * Daniel Tregeagle, Ph.D.
   :PROPERTIES:
-  :EXPORT_FILE_NAME: index
+  :EXPORT_FILE_NAME: _index
   :EXPORT_HUGO_SECTION: .
   :END:
 
@@ -95,11 +95,11 @@ text-align: justify}
 
 <!-- <div style="text-align: justify"> -->
 
-I am an assistant professor and extension specialist in the [Department of Agricultural and Resource Economics at North Carolina State University](https://cals.ncsu.edu/agricultural-and-resource-economics). My work is focused on the economics of specialty crops and the economics of agricultural policy more generally. Applications have included analyzing agro-environmental policy, market analysis, minimizing costs of processing supply chains, and optimizing orchard replacement. 
+I am an assistant professor and extension specialist in the [Department of Agricultural and Resource Economics at North Carolina State University](https://cals.ncsu.edu/agricultural-and-resource-economics). My work is focused on the economics of specialty crops and the economics of agricultural policy more generally. Applications have included analyzing agro-environmental policy, market analysis, minimizing costs of processing supply chains, and optimizing orchard replacement.
 
 I hold a Ph.D. and M.S. in agricultural and resource economics from the [University of California, Berkeley](https://are.berkeley.edu) as well as a Bachelor of Resource Economics (Hons. 1M) from the [University of Sydney, Australia](http://sydney.edu.au). During my postdoctoral studies at the [Department of Agricultural and Resource Economics at UC Davis](https://are.ucdavis.edu), I co-authored several inter-disciplinary reports for the California Department of Food and Agriculture analyzing the expected impacts of proposed pesticide regulations.
 
-My primary fields of study are agricultural, environmental, and natural resource economics. 
+My primary fields of study are agricultural, environmental, and natural resource economics.
 
 </div>
 #+end_export
@@ -119,15 +119,15 @@ text-align: justify}
 
 My dissertation, [The dynamics of perennial crop production and processing](/files/dissertationFinal.pdf), focused on the economics of perennial crop production, with applications to Brazilian sugarcane and the expansion of the Brazilian biofuel industry.
 
-<br> 
+<br>
 
 ## Peer Reviewed Publications
 
-### [Developing practical measures of the price of pesticide resistance: A flexible computational framework with global sensitivity analysis](https://doi.org/10.1002/jaa2.107) 
+### [Developing practical measures of the price of pesticide resistance: A flexible computational framework with global sensitivity analysis](https://doi.org/10.1002/jaa2.107)
 (with Chanheung Cho, Zachary Brown, and Kevin Gross) - Accepted at *Journal of the Agricultural and Applied Economics Association*.
 
 *Abstract*:
-Pesticide resistance poses an increasing challenge for agricultural sustainability. Pesticide susceptibility is a depletable biological resource, but resistance management rarely quantifies marginal, forward-looking economic costs to users of depleting this resource. We use a generic stochastic bioeconomic model of pesticide resistance evolution in a crop pest population, stochastic dynamic programming, and global sensitivity analysis to analyze the ‘marginal user costs’ of resistance. The most impactful parameters on these costs are population density dependence and pesticide prices. Least impactful is the fitness cost of resistance, which is noteworthy because of prior emphasis on this parameter in the resistance management literature.    
+Pesticide resistance poses an increasing challenge for agricultural sustainability. Pesticide susceptibility is a depletable biological resource, but resistance management rarely quantifies marginal, forward-looking economic costs to users of depleting this resource. We use a generic stochastic bioeconomic model of pesticide resistance evolution in a crop pest population, stochastic dynamic programming, and global sensitivity analysis to analyze the ‘marginal user costs’ of resistance. The most impactful parameters on these costs are population density dependence and pesticide prices. Least impactful is the fitness cost of resistance, which is noteworthy because of prior emphasis on this parameter in the resistance management literature.
 
 <br>
 
@@ -139,7 +139,7 @@ Perennial crops are important both economically and as a component of a healthy 
 
 <br>
 
-### [Minimizing the costs of biorefinery processing by managing perennial crop age: The case of Brazilian sugarcane](https://doi.org/10.1017/aae.2023.21) 
+### [Minimizing the costs of biorefinery processing by managing perennial crop age: The case of Brazilian sugarcane](https://doi.org/10.1017/aae.2023.21)
 (with David Zilberman) - *Journal of Agricultural and Applied Economics*, 2023, 55(2), 376--398.
 
 *Abstract*:
@@ -147,7 +147,7 @@ We develop and analyze an unexplored mechanism to reduce biorefinery supply chai
 
 <br>
 
-### [Willingness-to-pay for produce: A meta-regression analysis comparing the stated preferences of producers and consumers](https://doi.org/10.3390/horticulturae8040290) 
+### [Willingness-to-pay for produce: A meta-regression analysis comparing the stated preferences of producers and consumers](https://doi.org/10.3390/horticulturae8040290)
 (with Alice Kilduff) - *Horticulturae* 2022, 8(4), 290.
 
 *Abstract*:
@@ -155,10 +155,10 @@ Willingness-to-pay (WTP) estimates help agribusinesses estimate whether a new pr
 
 <br>
 
-### [Balancing bees and pest management: Projected costs of proposed bee-protective neonicotinoid regulation in California](https://doi.org/10.1093/jee/toab231) 
+### [Balancing bees and pest management: Projected costs of proposed bee-protective neonicotinoid regulation in California](https://doi.org/10.1093/jee/toab231)
 (with Kevi Mace, Jessica Rudder, Rachael Goodhue, Tor Tolhurst, Hanlin Wei, Elizabeth Grafton-Cardwell, Ian Grettnberger, Houston Wilson, Robert Van Steenwyk, Frank Zalom, and John Steggall) - *Journal of Economic Entomology*, 2022, 115(1), 10--25.
 
-*Abstract*: 
+*Abstract*:
 Neonicotinoid insecticides are widely used in agriculture, including in many California specialty crops. With mounting evidence that these insecticides are harmful to bees, state and national governments have increasingly regulated their use. The European Union, Canada, and United States have imposed use restrictions on several neonicotinoids, such as on the timing of applications. In 2020, California proposed a draft regulation to mitigate harm to managed pollinators from four nitroguanidine-substituted neonicotinoids (NGNs): clothianidin, dinotefuran, imidacloprid, and thiamethoxam. We use data on California pesticide use from 2015 to 2017 to analyze the economic and pest management implications of the 2020 draft proposed regulation for seven crops: almond, cherry, citrus, cotton, grape, strawberry, and tomato. From 2015 to 2017, these crops accounted for approximately 85% of total hectares treated with NGNs and 87% of NGN use by kilograms of active ingredient applied in treatments that would have been affected by the proposed regulation. These insecticides often primarily target Hemipteran insect pests. In most cases there are alternatives; however, these are often more expensive per hectare and do not have the same residual effectiveness as the NGNs, which are systemic insecticides. Overall, we estimate that pest management costs for these crops would have increased an estimated $13.6 million in 2015, $12.8 million in 2016, and $11.1 million in 2017 if the 2020 draft proposed regulation had been in effect, representing a 61% to 72% increase in the cost of managing the target pests.
 
 <br>
@@ -177,9 +177,9 @@ This paper presents a novel and parsimonious method of predicting the dynamic yi
 (with Leo Simon)
 
 *Abstract*:
-A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge uniformly to the long-run cycle. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius. 
+A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge uniformly to the long-run cycle. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius.
 
- 
+
 
 <br>
 <br>
@@ -240,7 +240,7 @@ I received a [Certificate of Teaching and Learning in Higher Education](https://
 ## Awards
 
  - Outstanding Graduate Student Instructor Award, UC Berkeley, Fall 2013.
- 
+
  - Most Valuable Facilitator Award (Facilitator's Choice), Peer-Assisted Students Sessions (PASS) Program, Winter Semester, 2009.
 
 &nbsp;
@@ -250,21 +250,21 @@ I received a [Certificate of Teaching and Learning in Higher Education](https://
  - Instructor, *Fundamentals of Microeconomics (ECG700)*, NC State, Fall 2020-21.
 
  - Instructor, Master of Development Practice Math Bootcamp, UC Berkeley, Summer 2014--2017 (4 summers).
- 
+
  - Discipline-Cluster Workshop Leader for Quantitative Social Sciences, UC Berkeley GSI Teaching Conference, Spring 2017.
- 
+
  - Teaching Assistant, *Dynamic Modeling* (ARE 298; a 2 week intensive course) for Prof. Christian Traeger, April 2015.
- 
+
  - Graduate Student Instructor, *Mathematical Methods for Agricultural and Resource Economics* (ARE211) for Prof. Leo Simon, UC Berkeley, Fall 2014.
- 
+
  - Graduate Student Instructor, *The Economics of Climate Change* (EEP 175) for Prof. Christian Traeger, UC Berkeley, Fall 2013.
- 
+
  - ARE Departmental Tutor, *Mathematical Tools for Economists* (ECON 204), UC Berkeley, Summer 2013.
- 
+
  - Teaching Assistant, *Introduction to Resource Economics* (RSEC1031) for Prof. Michael Harris, University of Sydney, Aug--Nov 2010.
- 
+
  - Peer-Assisted Study Session Facilitator for *Introductory Micro- and Macroeconomics*, University of Sydney, 2008--2010 (6 semesters).
- 
+
  - Video Peer Assisted Study Session Facilitator for an Anti-plagiarism Component of *Business in the Global Environment*, University of Sydney, 2009--2010 (2 semesters).
 
 
