--- a/content-org/site.org
+++ b/content-org/site.org
@@ -76,7 +76,7 @@ California review of the herbicide dacthal triggered by the requirements of Cali
   :ID:       0b0f30ab-bf62-4132-8dfe-1a9de47bb59e
   :END:
 
-  #+begin_src html
+  #+begin_src md
 <style>
 .floatRight {
   float: right;
